<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Preço Auto</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="action_refresh">Refresh</string>
	<string name="marca">Marca</string>
	<string name="modelo">Modelo</string>
	<string name="versao">Versao</string>
	<string name="detalhe">Detalhes do veiculo</string>
	<string name="ref">Mês de referência</string>
	<string name="ano">Ano</string>
	<string name="valor">Valor médio da venda</string>
	<string name="consulta">Data da consulta</string>
	<string name="grafico">Gráfico comparativo</string>
</resources>